--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
       <p class="slogan_logo">Renta de Stands.</p>
       <h1></h1>
       <p class="slogan">Stands para tus exposiciones , tu mejor opción.</p>
+<section class="galeria-horizontal">
+  <div class="container-horizontal">
+    <img src="foto1.jpg" alt="Stand 1">
+    <img src="foto2.jpg" alt="Stand 2">
+    <img src="foto3.jpg" alt="Stand 3">
+    <img src="foto4.jpg" alt="Stand 4">
+  </div>
+</section>
     </div>
   </header>
 
@@ -30,32 +38,56 @@
         <li>✔️ Precios competitivos</li>
         <li>✔️ Atencion profesional</li>
       </ul>
+<section class="carrusel">
+  <div class="carrusel-container">
+    <div class="slide"><img src="foto5.jpg" alt="Stand 1"></div>
+    <div class="slide"><img src="foto6.jpg" alt="Stand 2"></div>
+    <div class="slide"><img src="foto7.jpg" alt="Stand 3"></div>
+    <div class="slide"><img src="foto8.jpg" alt="Stand 2"></div>
+    <div class="slide"><img src="foto9.jpg" alt="Stand 3"></div>
+  </div>
+</section>
+
     </div>
   </section>
-
-  <section class="segmentos">
-    <div class="container">
-      <h2>Nuetros Stands </h2>
+<section class="segmentos">
+  <div class="container horizontal">
+    <div class="texto">
+      <h2>Nuetros Stands</h2>
       <p>Tenemos Stands modulares:</p>
       <ul>
         <li>2 x 2 , 3 x 2 , 3 x 3 , 6 x 3 </li>
         <li>Camerinos, Vestidores</li>
         <li>Montaje de acuerdo a tus necesidades</li>
-        <li>Contactanos.</li>
+        <li>Contáctanos.</li>
       </ul>
     </div>
-  </section>
+    <div class="imagen">
+      <img src="foto13.jpg" alt="Stands de ejemplo" />
+    </div>
+  </div>
+</section>
 
   <section class="segmentos">
     <div class="container">
       <h2>Nuetros Clientes </h2>
       <p>Tenemos clientes en toda la Republica Mexicana:</p>
       <ul>
-        <li>Exposiciones armadas</li>
+        <li>Stand Custom</li>
         <li>Esuelas , Institutos</li>
         <li>Gobierno</li>
         <li>Solo faltas tu, contactanos.</li>
       </ul>
+<section class="carrusel">
+  <div class="carrusel-container">
+    <div class="slide"><img src="foto15.jpg" alt="Stand 1"></div>
+    <div class="slide"><img src="foto16.jpg" alt="Stand 2"></div>
+    <div class="slide"><img src="foto17.jpg" alt="Stand 3"></div>
+    <div class="slide"><img src="foto18.jpg" alt="Stand 2"></div>
+    <div class="slide"><img src="foto19.jpg" alt="Stand 3"></div>
+  </div>
+</section>
+
     </div>
   </section>
 
@@ -69,7 +101,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 Scrap Marketing IT · Todos los derechos reservados</p>
+      <p>&copy; 2025 Scrap Marketing IT · Chatbots / Web / Marketing IT /Todos los derechos reservados</p>
       <p>Síguenos en <a href="https://www.facebook.com/share/1CjK5oPSoA/?mibextid=wwXIfr">Facebook</a></p>
     </div>
   </footer>
