--- a/index.html
+++ b/index.html
@@ -16,13 +16,16 @@
       <p class="slogan_logo">Renta de Stands.</p>
       <h1></h1>
       <p class="slogan">Stands para tus exposiciones , tu mejor opción.</p>
-<section class="galeria-horizontal">
-  <div class="container-horizontal">
-    <img src="foto1.jpg" alt="Stand 1">
-    <img src="foto3.jpg" alt="Stand 2">
-    <img src="foto4.jpg" alt="Stand 3">
-      </div>
+<section class="carrusel">
+  <div class="carrusel-container">
+    <div class="slide"><img src="foto1.jpg" alt="Stand 1"></div>
+    <div class="slide"><img src="foto2.jpg" alt="Stand 2"></div>
+    <div class="slide"><img src="foto3.jpg" alt="Stand 3"></div>
+    <div class="slide"><img src="foto4.jpg" alt="Stand 2"></div>
+    <div class="slide"><img src="foto5.jpg" alt="Stand 3"></div>
+  </div>
 </section>
+
     </div>
   </header>
 
